Testing basic layout

--- a/index.html
+++ b/index.html
@@ -1,7 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Analytics Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #35424a;
+            color: white;
+            text-align: center;
+            padding: 1rem 0;
+        }
+
+        .container {
+            max-width: 960px;
+            margin: 0 auto;
+            padding: 2rem;
+        }
+
+        .project {
+            margin-bottom: 2rem;
+            padding: 1.5rem;
+            background-color: white;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .project h2 {
+            margin-top: 0;
+        }
+
+        .project p {
+            margin-top: 1rem;
+        }
+
+        footer {
+            background-color: #35424a;
+            color: white;
+            text-align: center;
+            padding: 1rem 0;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello everyone, this will be my project page!</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <h1>Your Analytics Portfolio</h1>
+        <p>Showcasing my data analytics projects</p>
+    </header>
+    <div class="container">
+        <div class="project">
+            <h2>Project 1: Data Analysis Example</h2>
+            <p>A brief description of the project and the techniques used.</p>
+            <a href="project1.html">Read more</a>
+        </div>
+        <div class="project">
+            <h2>Project 2: Visualization Showcase</h2>
+            <p>Exploring data through compelling visualizations.</p>
+            <a href="project2.html">Read more</a>
+        </div>
+        <!-- Add more projects here -->
+    </div>
+    <footer>
+        <p>&copy; 2023 Your Name. All rights reserved.</p>
+    </footer>
 </body>
 </html>
