--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
         }
     </style>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0SLEJR1CDJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0SLEJR1CDJ');
+</script>
+
 <body>
     <header>
         <h1>Your Analytics Portfolio</h1>
