Added test css styles/rollover buttons

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <!-- Add more projects here -->
     </div>
     <footer>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
+        <p>&copy; 2023 Siddig Mohamed. All rights reserved.</p>
     </footer>
 </body>
 </html>
