--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         /* Global styles */
         body {
             font-family: Arial, sans-serif;
-            color: #333;
+            color: #751157;
         }
 
         /* Navigation styles */
@@ -33,8 +33,8 @@
             top: 0;
             left: 0;
             width: 100%;
-            background-color: #35424a;
-            color: white;
+            background-color: #38b1f7;
+            color: rgb(211, 60, 60);
             z-index: 100;
         }
 
