added photo and some more project information

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     <section id="about" class="about">
         <h2>About Me</h2>
         <div class="about-content">
-            <img src="profile-picture.jpg" alt="Profile Picture">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet est sit amet tincidunt.</p>
+            <img src="images/headshot.jpg" alt="Profile Picture">
+            <p>This is me! My name is Siddig and I am a recent graduate from Western University where I majored in Statistics.</p>
         </div>
     </section>
 
@@ -102,6 +102,11 @@
     <section id="projects" class="projects">
         <h2>Analytics Projects</h2>
         <!-- Project cards go here -->
+    </h3>Face Mask Detection</h3>
+
+    </h3>Health Insurance Regression</h3>
+    </h3>Social Deprivation Index</h3>
+
     </section>
 
     <!-- Contact section -->
