added more images and edits

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <!-- Projects section -->
     <section id="projects" class="projects">
         <h2>Analytics Projects</h2>
+        <img src = "images/barchart.png" alt = "Bar Chart">
         <!-- Project cards go here -->
     </h3>Face Mask Detection</h3>
 
@@ -112,8 +113,10 @@
     <!-- Contact section -->
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to reach out:</p>
-        <p>Email: your@email.com</p>
+        <p>Feel free to reach out!</p>
+
+        <p>Email: siddig.mohamed@eoutlook.com</p>
+        <img src = "images/linkedin.png" alt = "LinkedIn">
     </section>
 </body>
 </html>
