--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/hero-bg.jpg)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(images/headshot_healthsci.jpg)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
@@ -101,15 +101,15 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="images/headshot.jpg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Name: </span> <span>Morgan Freeman</span></p>
-                        <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                        <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
+                        <p><span class="title-s">Name: </span> <span>Siddig Mohamed</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Data Analyst</span></p>
+                        <p><span class="title-s">Email: </span> <span>siddig.mohamed@outlook.com</span></p>
+                        <!--<p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>-->
                       </div>
                     </div>
                   </div>
@@ -141,20 +141,19 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                      imperdiet et, porttitor
-                      at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                      porttitor accumsan tincidunt.
+                      My name is Siddig and I’m recent graduate from Western University where I studied Statisitcs. I’d describe myself as someone who is a curious learner, always trying to explore new things through a data-driven approach. 
+                      Over the passed 3 years I’ve learned many programming tools and languages while also completing many technical and educational projects in data analytics and machine learning as a project member and manager at Western AI. 
+                      In my most recent job, I spent last summer interning at TD Bank as a Data Specialist, where I led the data collection project for the API Management Team. 
+                      Outside of class I enjoy helping others while making a positive impact in my community.
+                      OC Soph: I’ve embodied this through involvement in Western’s Orientation program as an orientation leader by supporting incoming students to the university and currently serve as health captain where I plan events and initiatives focused on physical and mental health. 
+                      In the future I’d love to be able to couple my interests in driving actionable insights from data in a space where I can help others for the greater good of the world and I believe Inkblot would be a great atmosphere to do just that.
+
                     </p>
                     <p class="lead">
-                      Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                      porttitor volutpat. Vestibulum
-                      ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                     blah blah 
                     </p>
                     <p class="lead">
-                      Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                      Nulla porttitor accumsan
-                      tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                      blah
                     </p>
                   </div>
                 </div>
@@ -165,7 +164,7 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Services Section ======= -->
+    <!-- ======= Services Section ======= 
     <section id="services" class="services-mf pt-5 route">
       <div class="container">
         <div class="row">
@@ -274,9 +273,9 @@
           </div>
         </div>
       </div>
-    </section><!-- End Services Section -->
+    </section><!-- End Services Section --> 
 
-    <!-- ======= Counter Section ======= -->
+    <!-- ======= Counter Section ======= 
     <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/counters-bg.jpg)">
       <div class="overlay-mf"></div>
       <div class="container position-relative">
@@ -339,7 +338,7 @@
                 Portfolio
               </h3>
               <p class="subtitle-a">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Checkout some of the projects I've worked on!
               </p>
               <div class="line-mf"></div>
             </div>
@@ -356,9 +355,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Lorem impsum dolor</h2>
+                    <h2 class="w-title">Face Mask Detection</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Python, OpenCV</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -380,9 +379,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Loreda Cuno Nere</h2>
+                    <h2 class="w-title">Health Insurance Regression Analysis</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">R, Regression</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -404,9 +403,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Mavrito Lana Dere</h2>
+                    <h2 class="w-title">Retail Data Analysis</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Python, Jupyter Notebooks</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -428,7 +427,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Bindo Laro Cado</h2>
+                    <h2 class="w-title">Chicago Social Deprivation Index</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
@@ -452,9 +451,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Studio Lena Mado</h2>
+                    <h2 class="w-title">LA Popular Bike Routes</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">R | GoogleMaps API | Python</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -470,15 +469,15 @@
             <div class="work-box">
               <a href="assets/img/work-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-6.jpg" alt="" class="img-fluid">
+                  <img src="images/la_bike.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Studio Big Bang</h2>
+                    <h2 class="w-title">Toronto AirBnb Analysis</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>
+                      <span class="w-ctegory">Tableau</span> / <span class="w-date">18 Sep. 2017</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
