--- a/biking-la.html
+++ b/biking-la.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="images/bitmoji.png" rel="icon">
+  <link href="images/bitmoji.png" rel="apple-touch-icon">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -22,13 +22,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: DevFolio
-  * Updated: Jul 27 2023 with Bootstrap v5.3.1
-  * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body>
@@ -43,12 +37,12 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#work">Work</a></li>
-          <li><a class="nav-link scrollto " href="#blog">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto " href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
+         <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
+         <li><a class="nav-link scrollto " href="index.html#work">Work</a></li>
+          <!-- <li><a class="nav-link scrollto " href="index.html#blog">Blog</a></li>
+           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -64,8 +58,8 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          </li> -->
+          <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -102,10 +96,10 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio-details-1.jpg" alt="">
+                <div class="swiper">
+                  <img src="images/LA_top10BikeRoutes.png" alt="" class="img-fluid">
                 </div>
-
+                <!----
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio-details-2.jpg" alt="">
                 </div>
@@ -113,7 +107,7 @@
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio-details-3.jpg" alt="">
                 </div>
-
+              -->
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -124,16 +118,16 @@
               <h3>Project information</h3>
               <ul>
                 
-                <li><strong>Tools</strong>: Python, OpenCV, Keras, Numpy, Pandas, Google Colab</li>
+                <li><strong>Tools</strong>: R, Google Maps API,Uber Biking Data</li>
                 <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>GitHub Repo</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Code</strong>: <a href="https://colab.research.google.com/drive/1paYlOAe3jUJa1G3iklZcBSdynwdGAThP?usp=sharing">Github Repo</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>About</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
+                This project focuses on showcasing the top 10 bikeshare routes in Los Angeles, specifically those operated by the metro bike organization from April 2022 to June 2022. While the dataset includes around 67,000 trips, it has been refined to exclude short round trips for a clearer understanding of origin-destination journeys. The analysis highlights the dominance of bikeshare activity along the West Coast, primarily at Venice Beach, known for its tourist attractions. The interactive plot allows users to explore these routes, revealing patterns and preferences, with the most popular route being a short journey from the beach's edge to its center. This project underscores the demand for bike accessibility in tourist hotspots and areas with high foot traffic, addressing the challenges of transportation in a sprawling city like Los Angeles.
+            </p>
             </div>
           </div>
 
@@ -150,15 +144,9 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
+            <p class="copyright">&copy; Copyright <strong>Siddig Mohamed</strong>. All Rights Reserved</p>
             <div class="credits">
-              <!--
-              All the links in the footer should remain intact.
-              You can delete the links only if you purchased the pro version.
-              Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
-            -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+             
             </div>
           </div>
         </div>
