added images to projects

--- a/index.html
+++ b/index.html
@@ -97,23 +97,28 @@
           <div class="col-sm-12">
             <div class="box-shadow-full">
               <div class="row">
-                <div class="col-md-6">
+                <!-- <div class="col-md-6">
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
                         <img src="images/headshot.jpg" class="img-fluid rounded b-shadow-a" alt="">
-                      </div>
+                      </div> 
                     </div>
-                    <div class="col-sm-6 col-md-7">
-                      <div class="about-info">
+                    <div class="col-sm-6 col-md-7"> -->
+                    <!--  <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Siddig Mohamed</span></p>
-                        <p><span class="title-s">Profile: </span> <span>Data Analyst</span></p>
                         <p><span class="title-s">Email: </span> <span>siddig.mohamed@outlook.com</span></p>
-                        <!--<p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>-->
+                        <p><span class="title-s">Location</Address>: </span> <span>London, Ontario</span></p>
+                        <a href = "https://www.linkedin.com/in/siddig-m/" target = "_blank">
+                          <img src ="images/linkedin50.png" alt = "" width = "25">
+                        </a>
+                        <a href = "https://github.com/siddig-m" target = "_blank">
+                          <img src = "images/github50.png"  alt = "" width = "25">
+                        </a>
                       </div>
                     </div>
-                  </div>
-                  <div class="skill-mf">
+                  </div> -->
+                  <!-- <div class="skill-mf">
                     <p class="title-s">Skill</p>
                     <span>HTML</span> <span class="pull-right">85%</span>
                     <div class="progress">
@@ -131,9 +136,9 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                  </div>
-                </div>
-                <div class="col-md-6">
+                  </div> 
+                </div> -->
+                <div class="col-md-12">
                   <div class="about-me pt-4 pt-md-0">
                     <div class="title-box-2">
                       <h5 class="title-left">
@@ -141,20 +146,27 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      My name is Siddig and I’m recent graduate from Western University where I studied Statisitcs. I’d describe myself as someone who is a curious learner, always trying to explore new things through a data-driven approach. 
-                      Over the passed 3 years I’ve learned many programming tools and languages while also completing many technical and educational projects in data analytics and machine learning as a project member and manager at Western AI. 
-                      In my most recent job, I spent last summer interning at TD Bank as a Data Specialist, where I led the data collection project for the API Management Team. 
-                      Outside of class I enjoy helping others while making a positive impact in my community.
-                      OC Soph: I’ve embodied this through involvement in Western’s Orientation program as an orientation leader by supporting incoming students to the university and currently serve as health captain where I plan events and initiatives focused on physical and mental health. 
-                      In the future I’d love to be able to couple my interests in driving actionable insights from data in a space where I can help others for the greater good of the world and I believe Inkblot would be a great atmosphere to do just that.
-
+                      In a world of data, I envision a future where insights drive progress, and I'm excited to be a part of that transformation. 
+                      My name is Siddig and I’m a recent graduate from Western University where I studied statistics. 
+                      I’d describe myself as a curious learner, always trying to explore new things through a data-driven approach. 
                     </p>
                     <p class="lead">
-                     blah blah 
+                      Over the past years, I’ve learned many programming tools and languages while also completing many 
+                      technical and educational projects in data analytics and machine learning through internships, 
+                      coursework, and extracurriculars such as Western AI. 
                     </p>
                     <p class="lead">
-                      blah
+                      Beyond data analysis, I enjoy giving back and making a positive impact in my community. 
+                      During my time at Western, I exercised this through three years of involvement in Western’s Orientation program as an orientation leader. 
+                      As an orientation leader, I’ve supported hundreds of incoming students to the university and took on a larger role as the health captain 
+                      where I planned events and initiatives focused on physical and mental health. 
                     </p>
+                    <p class="lead">
+                      In the future, I’ve made it a mission of mine to couple my interests in driving actionable insights from data in a space where I can continue to 
+                      help others and contribute to the greater good of the world. I'm excited about the opportunities to create positive change and am always open to new 
+                      challenges and collaborations.
+                    </p>
+                    <p class="lead">
                   </div>
                 </div>
               </div>
@@ -273,7 +285,7 @@
           </div>
         </div>
       </div>
-    </section><!-- End Services Section --> 
+    </section> End Services Section --> 
 
     <!-- ======= Counter Section ======= 
     <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/counters-bg.jpg)">
@@ -349,9 +361,9 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="images/facemask-detection.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="images/la_bike.jpg" alt="" class="img-fluid">
+                  <img src="images/facemask-detection.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -373,9 +385,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="images/health.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
+                  <img src="images/health.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -397,9 +409,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="images/retail-sales.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
+                  <img src="images/retail-sales.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -421,9 +433,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="images/chicago.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-4.jpg" alt="" class="img-fluid">
+                  <img src="images/chicago.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -431,7 +443,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Chicago Social Deprivation Index</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">R </span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -445,15 +457,15 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="images/biking_la.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-5.jpg" alt="" class="img-fluid">
+                  <img src="images/biking_la.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">LA Popular Bike Routes</h2>
+                    <h2 class="w-title">Most Popular Bike Routes in LA</h2>
                     <div class="w-more">
                       <span class="w-ctegory">R | GoogleMaps API | Python</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
@@ -469,15 +481,15 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="images/airbnb-toronto.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/post-1.jpg" alt="" class="img-fluid">
+                  <img src="images/airbnb-toronto.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Toronto AirBnb Analysis</h2>
+                    <h2 class="w-title">Exploring the Toronto AirBnb Scene</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Tableau</span> / <span class="w-date">18 Sep. 2017</span>
                     </div>
@@ -491,20 +503,19 @@
               </div>
             </div>
           </div>
-          <div class="row">
             <div class="col-md-4">
               <div class="work-box">
-                <a href="assets/img/work-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <a href="images/mercury.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                   <div class="work-img">
-                    <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
+                    <img src="images/mercury.jpg" alt="" class="img-fluid">
                   </div>
                 </a>
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Consulting Lake Ph Levels Statistical Analysis</h2>
+                      <h2 class="w-title">Concerning Mercury Levels in Maine?</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Python, OpenCV</span> / <span class="w-date">18 Sep. 2018</span>
+                        <span class="w-ctegory">R | Statistical Tests | ggplot2 </span> / <span class="w-date">18 Sep. 2018</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -518,17 +529,17 @@
             </div>
             <div class="col-md-4">
               <div class="work-box">
-                <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <a href="images/sids-suits.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                   <div class="work-img">
-                    <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
+                    <img src="images/sids-suits.jpg" alt="" class="img-fluid">
                   </div>
                 </a>
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Sid's Suits Website</h2>
+                      <h2 class="w-title">Sid's Suits - Website Development</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">R, Regression</span> / <span class="w-date">18 Sep. 2018</span>
+                        <span class="w-ctegory">HTML | CSS | Javascript | Affinity </span> / <span class="w-date">18 Sep. 2018</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -542,17 +553,17 @@
             </div>
             <div class="col-md-4">
               <div class="work-box">
-                <a href="assets/img/work-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <a href="images/carcrash.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                   <div class="work-img">
-                    <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
+                    <img src="images/carcrash.jpg" alt="" class="img-fluid">
                   </div>
                 </a>
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">New York Car Crashes Visualization</h2>
+                      <h2 class="w-title">Visualizing NYC Motor Vehicle Collisions</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Python, Jupyter Notebooks</span> / <span class="w-date">18 Sep. 2018</span>
+                        <span class="w-ctegory">R | GoogleMaps API | ggplot2 </span> / <span class="w-date">18 Sep. 2018</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -563,8 +574,7 @@
                   </div>
                 </div>
               </div>
-            </div>
-            
+            </div> 
         </div>
       </div>
     </section><!-- End Portfolio Section -->
