--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Face Mask Detection</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Python, OpenCV</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Python | OpenCV | keras </span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -419,7 +419,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Retail Data Analysis</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Python, Jupyter Notebooks</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Python | pandas | </span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
