added airbnb dashboard project section

--- a/face-mask-detection.html
+++ b/face-mask-detection.html
@@ -118,8 +118,8 @@
               <h3>Project information</h3>
               <ul>
                 
-                <li><strong>Tools</strong>: Python, OpenCV, Keras, Numpy, Pandas, Google Colab</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
+                <li><strong>Tools</strong>: Python, Computuer Vision (OpenCV), Keras, Numpy, Pandas, Google Colab</li>
+                <li><strong>Project date</strong>: November 2020</li>
                 <li><strong>Code</strong>: <a href="https://colab.research.google.com/drive/1paYlOAe3jUJa1G3iklZcBSdynwdGAThP?usp=sharing">Google Colab File</a></li>
               </ul>
             </div>
