--- a/health-insurance.html
+++ b/health-insurance.html
@@ -97,7 +97,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper">
-                  <img src="images/health_insurance.jpg" alt=" "class="img-fluid">
+                  <img src="images/health.jpg" alt=" "class="img-fluid">
                 </div>
                 <!----
                 <div class="swiper-slide">
@@ -118,8 +118,8 @@
               <h3>Project information</h3>
               <ul>
                 
-                <li><strong>Tools</strong>: R, Regression, ggplot</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
+                <li><strong>Tools</strong>: R, Regression, Predictive Modelling, ggplot</li>
+                <li><strong>Project date</strong>: January 2021</li>
                 <li><strong>Code</strong>: <a href="https://github.com/siddig-m/U.S-Health-Insurance-Regression-Analysis">Github Repo</a></li>
               </ul>
             </div>
