--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Face Mask Detection</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Python | OpenCV | keras </span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Python | Computer Vision </span> / <span class="w-date">November 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -395,7 +395,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Health Insurance Regression Analysis</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">R, Regression</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">R | Regression</span> / <span class="w-date">January 2021</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -419,7 +419,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Retail Data Analysis</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Python | pandas | </span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Python | Time-Series</span> / <span class="w-date"> February 2021</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -443,7 +443,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Chicago Social Deprivation Index</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">R </span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">R </span> / <span class="w-date">December 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -467,7 +467,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Most Popular Bike Routes in LA</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">R | GoogleMaps API | Python</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">R | GoogleMaps API</span> / <span class="w-date">November 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -491,7 +491,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Exploring the Toronto AirBnb Scene</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Tableau</span> / <span class="w-date">18 Sep. 2017</span>
+                      <span class="w-ctegory">Tableau</span> / <span class="w-date">August 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -515,7 +515,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Concerning Mercury Levels in Maine?</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">R | Statistical Tests | ggplot2 </span> / <span class="w-date">18 Sep. 2018</span>
+                        <span class="w-ctegory">R | Statistical Tests </span> / <span class="w-date"> February 2023</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -539,7 +539,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Sid's Suits - Website Development</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">HTML | CSS | Javascript | Affinity </span> / <span class="w-date">18 Sep. 2018</span>
+                        <span class="w-ctegory">HTML | CSS | Javascript | Affinity </span> / <span class="w-date">April 2022</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -563,7 +563,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Visualizing NYC Motor Vehicle Collisions</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">R | GoogleMaps API | ggplot2 </span> / <span class="w-date">18 Sep. 2018</span>
+                        <span class="w-ctegory">R | GoogleMaps API </span> / <span class="w-date">November 2022</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
