--- a/retail-analysis.html
+++ b/retail-analysis.html
@@ -118,8 +118,8 @@
               <h3>Project information</h3>
               <ul>
                 
-                <li><strong>Tools</strong>: Python, Time-Series Analysis, Matplotlib, Numpy, Pandas, seaborn, sklearn, statsmodels </li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
+                <li><strong>Tools</strong>: Python, Time-Series Analysis (ARIMA), Matplotlib, Numpy, Pandas, seaborn, sklearn, statsmodels </li>
+                <li><strong>Project date</strong>: February 2021</li>
                 <li><strong>Code</strong>: <a href="https://github.com/siddig-m/retail_analysis_forecasting">Github Repo</a></li>
               </ul>
             </div>
