--- a/airbnb-toronto.html
+++ b/airbnb-toronto.html
@@ -123,7 +123,7 @@
                 
                 <li><strong>Tools</strong>: Tableau, Data Visualiazation</li>
                 <li><strong>Project date</strong>: August 2023</li>
-                <li><strong>Link</strong>: <a href="https://public.tableau.com/shared/WBPW6YCS5?:display_count=n&:origin=viz_share_link">Tableau Public</a></li>
+                <li><strong>Link</strong>: <a href="https://public.tableau.com/shared/SJG39FJDM?:display_count=n&:origin=viz_share_link" target="_blank">Tableau Public</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
