--- a/biking-la.html
+++ b/biking-la.html
@@ -97,7 +97,8 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper">
-                  <img src="images/LA_top10BikeRoutes.png" alt="" class="img-fluid">
+                  <iframe src="images/interactive-bike-plot.html" width="600" height="500" frameborder="0"></iframe>
+
                 </div>
                 <!----
                 <div class="swiper-slide">
@@ -118,16 +119,18 @@
               <h3>Project information</h3>
               <ul>
                 
-                <li><strong>Tools</strong>: R, Google Maps API,Uber Biking Data</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Code</strong>: <a href="https://colab.research.google.com/drive/1paYlOAe3jUJa1G3iklZcBSdynwdGAThP?usp=sharing">Github Repo</a></li>
+                <li><strong>Tools</strong>: R, Google Maps API</li>
+                <li><strong>Project date</strong>: November 2022</li>
+                <li><strong>Code</strong>: <a href="https://github.com/siddig-m/Top10BikeRoutes-LA" target="_blank">Github Repo</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>About</h2>
               <p>
-                This project focuses on showcasing the top 10 bikeshare routes in Los Angeles, specifically those operated by the metro bike organization from April 2022 to June 2022. While the dataset includes around 67,000 trips, it has been refined to exclude short round trips for a clearer understanding of origin-destination journeys. The analysis highlights the dominance of bikeshare activity along the West Coast, primarily at Venice Beach, known for its tourist attractions. The interactive plot allows users to explore these routes, revealing patterns and preferences, with the most popular route being a short journey from the beach's edge to its center. This project underscores the demand for bike accessibility in tourist hotspots and areas with high foot traffic, addressing the challenges of transportation in a sprawling city like Los Angeles.
+                This project focuses on showcasing the top 10 bikeshare routes in Los Angeles, specifically those operated by the metro bike organization from April 2022 to June 2022. While the dataset includes around 67,000 trips, it has been refined to exclude short round trips for a clearer understanding of origin-destination journeys. The analysis highlights the dominance of bikeshare activity along the West Coast, primarily at Venice Beach, known for its tourist attractions. The interactive plot allows users to explore these routes, revealing patterns and preferences, with the most popular route being a short journey from the beach's edge to its center. This project underscores the demand for bike accessibility in tourist hotspots and areas with high foot traffic, addressing the challenges of transportation in a sprawling city like Los Angeles. 
+     
             </p>
+            <p>Double clicking any of the bike trips in the legend will highlight it.</p>
             </div>
           </div>
 
