--- a/deprivation-index.html
+++ b/deprivation-index.html
@@ -97,7 +97,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper">
-                  <img src="images/deprivation-index.png" alt=""" class="img-fluid">
+                  <img src="images/chicago-deprivation-index.jpg" alt=""" class="img-fluid">
                 </div>
                 <!----
                 <div class="swiper-slide">
@@ -118,9 +118,9 @@
               <h3>Project information</h3>
               <ul>
                 
-                <li><strong>Tools</strong>: R, Google Maps API, Geography</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Code</strong>: <a href="https://colab.research.google.com/drive/1paYlOAe3jUJa1G3iklZcBSdynwdGAThP?usp=sharing">Github Repo</a></li>
+                <li><strong>Tools</strong>: R, tmap,</li>
+                <li><strong>Project date</strong>: December 2022</li>
+                <li><strong>Code</strong>: <a href="https://github.com/siddig-m/Chicago-SocialDeprivationIndex" target="_blank">Github Repo</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
