--- a/face-mask-detection.html
+++ b/face-mask-detection.html
@@ -120,7 +120,7 @@
                 
                 <li><strong>Tools</strong>: Python, Computuer Vision (OpenCV), Keras, Numpy, Pandas, Google Colab</li>
                 <li><strong>Project date</strong>: November 2020</li>
-                <li><strong>Code</strong>: <a href="https://colab.research.google.com/drive/1paYlOAe3jUJa1G3iklZcBSdynwdGAThP?usp=sharing">Google Colab File</a></li>
+                <li><strong>Code</strong>: <a href="https://colab.research.google.com/drive/1paYlOAe3jUJa1G3iklZcBSdynwdGAThP?usp=sharing" target="_blank">Google Colab File</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
