--- a/health-insurance.html
+++ b/health-insurance.html
@@ -120,7 +120,7 @@
                 
                 <li><strong>Tools</strong>: R, Regression, Predictive Modelling, ggplot</li>
                 <li><strong>Project date</strong>: January 2021</li>
-                <li><strong>Code</strong>: <a href="https://github.com/siddig-m/U.S-Health-Insurance-Regression-Analysis">Github Repo</a></li>
+                <li><strong>Code</strong>: <a href="https://github.com/siddig-m/U.S-Health-Insurance-Regression-Analysis" target="_blank">Github Repo</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
