--- a/nyc-crashes.html
+++ b/nyc-crashes.html
@@ -97,7 +97,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper">
-                  <img src="images/LA_top10BikeRoutes.png" alt="" class="img-fluid">
+                  <img src="images/nyc_crashes_by_season.png" alt="" class="img-fluid">
                 </div>
                 <!----
                 <div class="swiper-slide">
@@ -118,16 +118,16 @@
               <h3>Project information</h3>
               <ul>
                 
-                <li><strong>Tools</strong>: R, Data Visualiazation</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Code</strong>: <a href="https://colab.research.google.com/drive/1paYlOAe3jUJa1G3iklZcBSdynwdGAThP?usp=sharing">Tableau Public Site?</a></li>
+                <li><strong>Tools</strong>: R, GoogleMaps API</li>
+                <li><strong>Project date</strong>: November 2022 </li>
+                <li><strong>Code</strong>: <a href="https://github.com/siddig-m/NYC-Crashes" target="_blank">Github Repo</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>About</h2>
               <p>
-                This project focuses on showcasing the top 10 bikeshare routes in Los Angeles, specifically those operated by the metro bike organization from April 2022 to June 2022. While the dataset includes around 67,000 trips, it has been refined to exclude short round trips for a clearer understanding of origin-destination journeys. The analysis highlights the dominance of bikeshare activity along the West Coast, primarily at Venice Beach, known for its tourist attractions. The interactive plot allows users to explore these routes, revealing patterns and preferences, with the most popular route being a short journey from the beach's edge to its center. This project underscores the demand for bike accessibility in tourist hotspots and areas with high foot traffic, addressing the challenges of transportation in a sprawling city like Los Angeles.
-            </p>
+                This project analyzes motor vehicle crash data in New York City during 2018, focusing on both spatial and seasonal trends. The study reveals concentrated crash hotspots in midtown Manhattan and uncovers how different seasons impact the occurrence of crashes, providing valuable insights for urban safety and planning initiatives.
+              </p>
             </div>
           </div>
 
