--- a/retail-analysis.html
+++ b/retail-analysis.html
@@ -120,7 +120,7 @@
                 
                 <li><strong>Tools</strong>: Python, Time-Series Analysis (ARIMA), Matplotlib, Numpy, Pandas, seaborn, sklearn, statsmodels </li>
                 <li><strong>Project date</strong>: February 2021</li>
-                <li><strong>Code</strong>: <a href="https://github.com/siddig-m/retail_analysis_forecasting">Github Repo</a></li>
+                <li><strong>Code</strong>: <a href="https://github.com/siddig-m/retail_analysis_forecasting" target="_blank">Github Repo</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
